# bazel_py_minimal

./: .bazelrc  BUILD.bazel  MODULE.bazel  requirements.in  requirements_3_9.txt
cli_tool/: BUILD.bazel  cli_tool.py
runfiles_from_pipy_do_not_work/: BUILD.bazel  test_runfiles.py
setuptools_not_present_in_venv/: BUILD.bazel  test_ray.py
